fix lua generated table on narrow screen

--- a/htdocs/luci-static/argon/less/cascade.less
+++ b/htdocs/luci-static/argon/less/cascade.less
@@ -3766,7 +3766,7 @@ pre.command-output {
         font-size: 1rem;
     }
 
-    .table {
+    .table, .table>tbody {
         display: block;
     }
 
